fixed spacing issue

--- a/src/Components/ForgotPassword.css
+++ b/src/Components/ForgotPassword.css
@@ -21,6 +21,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 200px;
+  margin-bottom: 100px;
 }
 
 .label .recover-password {
@@ -57,7 +58,7 @@ form {
   font-family: 'Nunito', sans-serif;
   color: #C3C3C3;
   font-size: 18px;
-  margin: 20px 0;
+
   background-position: 95%;
   background-repeat: no-repeat;
   background-size: 20px 20px;
@@ -94,6 +95,6 @@ form {
   height: 57px;
   width: 304px; 
   position: relative;
-  margin-top: 60px;
+  margin-top: 90px;
   align-self: center;
 }
